--- a/css/component.css
+++ b/css/component.css
@@ -20,9 +20,11 @@
 
 /* Text styling */
 .cbp-so-section h2 {
-	font-size: 5em;
+	font-family: 'Rock Salt', cursive;
+	font-size: 3em;
 	font-weight: 300;
 	line-height: 1;
+	color:#67697C;
 }
 
 .cbp-so-section p {
@@ -117,18 +119,17 @@
 	}
 
 	.cbp-so-side img {
-		max-width: 120%;
+		max-width: 100%;
 	}
 }
 
 @media screen and (max-width: 41.125em) {
 	.cbp-so-side {
 		float: none;
-		width: 100%;
+		max-width: 100%;
 	}
 
 	.cbp-so-side img {
 		max-width: 100%;
 	}
 }
-
