--- a/css/demo.css
+++ b/css/demo.css
@@ -1,5 +1,8 @@
 /* General Blueprint Style */
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt');
 @font-face {
 	font-family: 'bpicons';
 	src:url('../fonts/bpicons/bpicons.eot');
@@ -19,9 +22,10 @@ body, html { font-size: 100%; padding: 0; margin: 0;}
 .clearfix:after { clear: both; }
 
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: #fff;
-    background: #47a3da;
+    font-family: 'Montserrat', sans-serif;
+    color: #A5A5A5;
+		background-color: #F2F2F2;
+		/*background-image: url(../images/beton.jpg);*/
 }
 
 a {
@@ -31,6 +35,7 @@ a {
 
 a:hover {
 	color: #000;
+	font-size: 4em;
 }
 
 .container > header {
@@ -41,11 +46,13 @@ a:hover {
 }
 
 .container > header h1 {
-	font-size: 2.125em;
+	font-family: 'Rock Salt', cursive;
+	font-size: 5em;
 	line-height: 1.3;
-	margin: 0 0 0.6em 0;
+	margin: 2em 5em 0.6em 0;
 	float: left;
 	font-weight: 400;
+	color:#084887;
 }
 
 .container > header > span {
